demo/traefik-v2/k8s/04-mongo/02_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: back
  labels:
    app: mongo
spec:
  ports:
    - protocol: TCP
      name: mongo
      port: 27017
  selector:
    app: mongo
